--- a/index.html
+++ b/index.html
@@ -2,149 +2,326 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Домашнее задание №3</title>
-	<meta name="description" content="Описание станицы">
-	<meta name="keywords" content="Ключевые, слова, через, запятую">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Онлайн-курсы верстки от Шуляка Сергея</title>
+	<meta name="description" content="Уникальные курсы в формате онлайн. Становитесь фрилансером уже сегодня! Консультации преподавателей и домашние задания уже ожидают!">
+	<meta name="keywords" content="Онлайн-курсы, Верстка, Курсы по верстке, Фриланс, Обучение верстки">
 	<!-- Favicon -->
-	<link rel="icon" href="#" type="image/x-icon">
- 	<link rel="shortcut icon" href="#" type="image/x-icon"> 
+	<link rel="shortcut icon" href="img/favicon/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicon/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="img/favicon/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="img/favicon/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="img/favicon/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16.png">
+	<link rel="apple-touch-icon" href="img/favicon/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="img/favicon/favicon-144.png">
+	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
 	<!-- OG Tags -->
-	<meta property="og:title" content="Домашнее задание №3">
-	<meta property="og:description" content="Описание станицы">
+	<meta property="og:title" content="Онлайн-курсы: обучение разработке сайтов, веб-дизайну, wordpress, фрилансу">
+	<meta property="og:description" content="Уникальные курсы в формате онлайн. Становитесь фрилансером уже сегодня! Консультации преподавателей и домашние задания уже ожидают!">
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
-	<meta property="og:site_name" content="SITENAME">
+	<meta property="og:site_name" content="Онлайн-курсы верстки от Шуляка Сергея">
 	<!-- CSS Styles -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet"> 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header id="header" class="header">
-		<div class="navigation">
-			<div class="container">
-				<a href="#" class="logo">
-				Mylogo
+	<header class="header" id="header">
+		<div class="container">
+			<nav class="nav d-flex jcsb">
+				<a class="logo d-flex" href="#">
+					<i class="logo__icon fa fa-plug"></i>
+					<div class="logo__text">
+						Моя школа <span class="logo__text-big">верстки</span>
+					</div>
 				</a>
-				<nav>
-					<ul class="menu">
-						<li>
-							<a href="#">
-								Главная
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								Портфолио
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								Услуги
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								Контакты
-							</a>
-						</li>
-					</ul>
-				</nav>
-				<a href="tel:+74959825364" class="call">+7 (495) 982-53-64</a>
-			</div>
-		</div>
-		<div class="cards_block">
-			<div class="container">
-				<h1>
-					Главный заголовок страницы
-				</h1>
-				<p class="main_title_text">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore 
-				</p>
-				<div class="cards">
-					<div class="card_1 card">
-						<h3 class="cards_title">
-							Это тестовая карточка #1
-						</h3>
-						<p class="cards_text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						</p>
-					</div>
-					<div class="card_2 card">
-						<h3 class="cards_title">
-							Это тестовая карточка #2
-						</h3>
-						<p class="cards_text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						</p>
-					</div>
-					<div class="card_3 card">
-						<h3 class="cards_title">
-							Это тестовая карточка #3
-						</h3>
-						<p class="cards_text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						</p>
-						<a href="#">
-							Узнать больше
+				<ul class="menu d-flex">
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							Знаете ли вы
 						</a>
-					</div>
-				</div>
-			</div>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							Зачем
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							Кому
+						</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">
+							Регистрация
+						</a>
+					</li>
+				</ul>
+				<a href="tel:+749556756412" class="call">
+					<i class="fa fa-phone"></i>
+					+7 (495) 567-564-12
+				</a>
+			</nav>
 		</div>
 	</header>
-	<section id="offer" class="offer">
+	<section class="reg" id="reg">
 		<div class="container">
-			<div class="contact_information">
-					<form action="#" class="form">
-						<h2>
-							Заголовок второй секции
-						</h2>
-						<input type="text" name="name" placeholder="Имя" required>
-						<input type="email" name="email" placeholder="E-mail" required>
-						<input type="tel" name="phone" placeholder="Телефон" required>
-						<textarea name="message" id="message" placeholder="Сообщение"></textarea>
-						<button type="submit" class="form_btn">
-							Отправить
-						</button>
-						<p class="data">
-							Ваши данные надежно защищены
-						</p>
-					</form>
-				<div class="big_card">
-					<div class="intro">
-						<h3>
-							Заголовок карточки
-						</h3>
-						<p class="intro_text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. anim id est laborum
-						</p>
-						<img src="img/screen.jpg" alt="screen">
+			<div class="contact d-flex jcsb">
+				<div class="offer d-flex-center" id="offer">
+					<div class="offer__workshop">
+						<i class="fa fa-graduation-cap"></i>
+						Онлайн-мастер-класс
 					</div>
-					<div class="intro">
-						<p class="intro_text_right">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. anim id est laborum. em ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+					<h1 class="offer__title">
+						Я — профессиональный веб-верстальщик
+					</h1>
+					<p class="offer_text">
+						9 апреля в 18:00
+					</p>
+				</div>
+				<form action="#" class="form">
+					<h4 class="form__title">
+						Забронировать участие
+					</h4>
+					<p class="form__text">
+						Чтобы стать профессионалом в  HTML и CSS, а также делать WOW
+					</p>
+					<div class="form__wrap">
+						<input type="text" class="form__input" name="name" placeholder="Введите имя" required>
+						<input type="email" class="form__input" name="email" placeholder="Введите E-mail" required>
+						<input type="tel" class="form__input" name="phone" placeholder="Введите телефон">
+						<button type="submit" class="form__btn">
+							Оставить заявку
+						</button>
+					</div>
+					<p class="form__safety">
+						Ваши данные под защитой
+					</p>
+				</form>
+			</div>
+		</div>
+	</section>
+	<section class="stats" id=stats>
+		<div class="container">
+			<div class="stats__info d-flex">
+				<div class="author big-card">
+					<div class="author__name">
+						Сергей Шуляк
+					</div>
+					<div class="author__details">
+						<p class="author__line">
+							Ведущий мастер-класса
 						</p>
+						<p class="author__line">
+							Веб-верстальщик и фрилансер
+						</p>
+					</div>
+					<div class="author__digits d-flex">
+						<div class="author__element d-flex">
+							<div class="author__icon">
+								100+
+							</div>
+							<div class="author__text author__text_long">
+								Созданных сайтов
+							</div>
+						</div>
+						<div class="author__element d-flex">
+							<div class="author__icon">
+								8
+							</div>
+							<div class="author__text author__text_short">
+								Лет опыта
+							</div>
+						</div>
+					</div>
+					<a href="#" class="author__link link">
+						Узнать больше
+					</a>
+				</div>
+				<div class="question question_right">
+					<h2 class="question__title">
+						Знаете ли вы?
+					</h2>
+					<p class="question__text">
+						По статистике, среднестатистический фрилансер зарабатывает около <b>30 тысяч рублей</b> в месяц. Чаще всего, гораздо меньше этой цифры.
+					</p>
+				</div>
+			</div>
+			<div class="stats__profit d-flex">
+				<div class="question question_left">
+					<h2 class="question__title">
+						Хм...
+					</h2>
+					<p class="question__text">
+						Почему же так мало? Чего не хватает фрилансерам, чтобы “пробить потолок” хотя бы...
+					</p>
+				</div>
+				<div class="amount big-card d-flex">
+					<div class="amount__money">
+						$1000
+						<span>
+							в месяц?
+						</span>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<footer id="footer" class="footer">
+	<section class="skills" id="skills">
 		<div class="container">
-			<p class="footer_first_element">
-				Все права защищены
-			</p>
-			<button class="btn">
-				Контурная кнопка
-			</button>
-			<button class="btn btn_circl">
-				Контурная кнопка
-			</button>
-			<p class="white_bg">
-				Отрывок текста на белом фоне
-			</p>
-			<p class="footer_last_element">
-				Готово! Я - молодец :)
-			</p>
+			<h2 class="skills__title">
+				Я покажу,<br>
+				как мне удается...
+			</h2>
+			<div class="skills__elements skills__element_left d-flex">
+				<div class="skills__element d-flex">
+					<span class="skills__icon">
+						1
+					</span>
+					<div class="skills__details">
+						<h3 class="skills__name">
+							Зарабатывать тысячи долларов
+						</h3>
+						<p class="skills__text">
+							Исключительно с помощью веб-верстки и навыков разработки сайтов
+						</p>
+					</div>
+				</div>
+				<div class="skills__element skills__element_center d-flex">
+					<span class="skills__icon">
+						2
+					</span>
+					<div class="skills__details">
+						<h3 class="skills__name">
+							Работать <br>
+							в путешествиях
+						</h3>
+						<p class="skills__text">
+							Без возврата домой, используя ноутбук и все возможности фриланса
+						</p>
+					</div>
+				</div>
+				<div class="skills__element skills__element_right d-flex">
+					<span class="skills__icon">
+						3
+					</span>
+					<div class="skills__details">
+						<h3 class="skills__name">
+							Быть на шаг впереди конкурентов
+						</h3>
+						<p class="skills__text">
+							Используя проверенные стратегии развития, общения и работы с клиентами
+						</p>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</section>
+	<section class="limits" id="limits">
+		<div class="container">
+			<h2 class="limits__title">
+				Если вы
+			</h2>
+			<div class="limits__block d-flex jcsb">
+				<div class="limits__card limits__card_green">
+					<i class="limits__icon fa fa-flag"></i>
+					<p class="limits__text">
+						Начинающий <br>
+						веб-верстальщик
+					</p>
+				</div>
+				<div class="limits__card limits__card_blue">
+					<i class="limits__icon fa fa-money-bill-alt"></i>
+					<p class="limits__text">
+						Не довольны доходами на фрилансе
+					</p>
+				</div>
+				<div class="limits__card limits__card_pink">
+					<i class="limits__icon fa fa-meh"></i>
+					<p class="limits__text">
+						На фрилансе &#62;2 лет, но ваш доход &#60; $1000
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="invite" id="invite">
+		<div class="container">
+			<div class="contact contact_color d-flex jcsb">
+				<div class="offer invite__offer d-flex-center" id="offer">
+					<div class="offer__workshop offer__workshop_white">
+						<i class="fa fa-graduation-cap"></i>
+						Онлайн-мастер-класс
+					</div>
+					<h2 class="offer__title offer__title_white">
+						Не потеряйте уникальную возможность.
+						Бронируйте участие уже сегодня!
+					</h2>
+					<div class="offer__texts d-flex">
+						<p class="offer__text offer__text_white">
+							<i class="fa fa-clock"></i>
+							9 апреля в 18:00
+						</p>
+						<p class="offer__text offer__text_white">
+							<i class="fa fa-users"></i>
+							Всего 40 мест
+						</p>
+					</div>
+					
+				</div>
+				<form action="#" class="form">
+					<h4 class="form__title">
+						Забронировать участие
+					</h4>
+					<p class="form__text">
+						Чтобы стать профессионалом в  HTML и CSS, а также делать WOW
+					</p>
+					<div class="form__wrap">
+						<input type="text" class="form__input" name="name" placeholder="Введите имя" required>
+						<input type="email" class="form__input" name="email" placeholder="Введите E-mail" required>
+						<input type="tel" class="form__input" name="phone" placeholder="Введите телефон">
+						<button type="submit" class="form__btn">
+							Оставить заявку
+						</button>
+					</div>
+					<p class="form__safety">
+						Ваши данные под защитой
+					</p>
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer class="footer" id="footer">
+		<div class="container">
+			<nav class="nav d-flex jcsb">
+				<a class="logo d-flex" href="#">
+					<i class="logo__icon fa fa-plug"></i>
+					<div class="logo__text">
+						Моя школа <span class="logo__text-big">верстки</span>
+					</div>
+				</a>
+				<p class="coppy">
+					Все права защищены
+				</p>
+				<a href="tel:+749556756412" class="call">
+					<i class="fa fa-phone"></i>
+					+7 (495) 567-564-12
+				</a>
+			</nav>
 		</div>
 	</footer>
 </body>
