--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<h1 class="offer__title">
 						Я — профессиональный веб-верстальщик
 					</h1>
-					<p class="offer_text">
+					<p class="offer__text">
 						9 апреля в 18:00
 					</p>
 				</div>
