--- a/index.html
+++ b/index.html
@@ -34,147 +34,128 @@
 	<meta property="og:image" content="#" >
 	<meta property="og:site_name" content="Онлайн-курсы верстки от Шуляка Сергея">
 	<!-- CSS Styles -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet"> 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<header class="header" id="header">
 		<div class="container">
 			<nav class="nav d-flex jcsb">
-				<a class="logo d-flex" href="#">
-					<i class="logo__icon fa fa-plug"></i>
-					<div class="logo__text">
-						Моя школа <span class="logo__text-big">верстки</span>
-					</div>
+				<a href="#" class="logo">
+					<img src="img/logo.png" alt="MYPORTFOLIO">
 				</a>
 				<ul class="menu d-flex">
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							Знаете ли вы
+						<a href="#about" class="menu__link">
+							обо мне
 						</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							Зачем
+						<a href="#skills" class="menu__link">
+							навыки
 						</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">
-							Кому
-						</a>
-					</li>
-					<li class="menu__item">
-						<a href="#" class="menu__link">
-							Регистрация
+						<a href="#work" class="menu__link">
+							работы
 						</a>
 					</li>
 				</ul>
-				<a href="tel:+749556756412" class="call">
-					<i class="fa fa-phone"></i>
-					+7 (495) 567-564-12
-				</a>
+				<a href="mailto:info@myname.com" class="info-mail">info@myname.com</a>
 			</nav>
+			<div class="intro">
+				<h1 class="intro__title">
+					Дело, которым я живу
+				</h1>
+				<p class="intro__text">
+					верстка & frontend
+				</p>
+			</div>
+			<a href="#about" class="scroll">
+				&darr;
+			</a>
 		</div>
 	</header>
-	<section class="reg" id="reg">
+	<section class="about" id="about">
 		<div class="container">
-			<div class="contact d-flex jcsb">
-				<div class="offer d-flex-center" id="offer">
-					<div class="offer__workshop">
-						<i class="fa fa-graduation-cap"></i>
-						Онлайн-мастер-класс
-					</div>
-					<h1 class="offer__title">
-						Я — профессиональный веб-верстальщик
-					</h1>
-					<p class="offer__text">
-						9 апреля в 18:00
+			<h2 class="about-title">
+				обо мне
+			</h2>
+			<div class="info d-flex jcsb">
+				<div class="desc">
+					<h3 class="desc__title opacity-text">
+						бэкграунд
+					</h3>
+					<p class="desc__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.
+					</p>
+					<p class="desc__text">
+						Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.
+					</p>
+					<p class="desc__text">
+						Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa quiis aute irure dolor in reprehenderit in is aute irure dolor in reprehenderit in is aute irure dolor in reprehenderit in.
 					</p>
 				</div>
-				<form action="#" class="form">
-					<h4 class="form__title">
-						Забронировать участие
-					</h4>
-					<p class="form__text">
-						Чтобы стать профессионалом в  HTML и CSS, а также делать WOW
-					</p>
-					<div class="form__wrap">
-						<input type="text" class="form__input" name="name" placeholder="Введите имя" required>
-						<input type="email" class="form__input" name="email" placeholder="Введите E-mail" required>
-						<input type="tel" class="form__input" name="phone" placeholder="Введите телефон">
-						<button type="submit" class="form__btn">
-							Оставить заявку
-						</button>
-					</div>
-					<p class="form__safety">
-						Ваши данные под защитой
-					</p>
-				</form>
-			</div>
-		</div>
-	</section>
-	<section class="stats" id=stats>
-		<div class="container">
-			<div class="stats__info d-flex">
-				<div class="author big-card">
-					<div class="author__name">
-						Сергей Шуляк
-					</div>
-					<div class="author__details">
-						<p class="author__line">
-							Ведущий мастер-класса
-						</p>
-						<p class="author__line">
-							Веб-верстальщик и фрилансер
-						</p>
-					</div>
-					<div class="author__digits d-flex">
-						<div class="author__element d-flex">
-							<div class="author__icon">
-								100+
+				<div class="connect">
+					<div class="rewards">
+						<h3 class="rewards__title opacity-text">
+							Заслуги
+						</h3>
+						<div class="rewards__items d-flex">
+							<div class="rewards__item">
+								<div class="rewards__count">
+									75
+								</div>
+								<p class="rewards__text">
+									Реализованных проектов
+								</p>
 							</div>
-							<div class="author__text author__text_long">
-								Созданных сайтов
+							<div class="rewards__item">
+								<div class="rewards__count">
+									154
+								</div>
+								<p class="rewards__text">
+									Положительных отзыва
+								</p>
 							</div>
-						</div>
-						<div class="author__element d-flex">
-							<div class="author__icon">
-								8
-							</div>
-							<div class="author__text author__text_short">
-								Лет опыта
+							<div class="rewards__item">
+								<div class="rewards__count">
+									8
+								</div>
+								<p class="rewards__text rewards__text_small">
+									Лет опыта
+								</p>
 							</div>
 						</div>
 					</div>
-					<a href="#" class="author__link link">
-						Узнать больше
-					</a>
-				</div>
-				<div class="question question_right">
-					<h2 class="question__title">
-						Знаете ли вы?
-					</h2>
-					<p class="question__text">
-						По статистике, среднестатистический фрилансер зарабатывает около <b>30 тысяч рублей</b> в месяц. Чаще всего, гораздо меньше этой цифры.
-					</p>
-				</div>
-			</div>
-			<div class="stats__profit d-flex">
-				<div class="question question_left">
-					<h2 class="question__title">
-						Хм...
-					</h2>
-					<p class="question__text">
-						Почему же так мало? Чего не хватает фрилансерам, чтобы “пробить потолок” хотя бы...
-					</p>
-				</div>
-				<div class="amount big-card d-flex">
-					<div class="amount__money">
-						$1000
-						<span>
-							в месяц?
-						</span>
+					<div class="contact">
+						<h3 class="contact__title opacity-text">
+							Связь
+						</h3>
+						<div class="contact-wrap d-flex jcsb">
+							<ul class="social">
+								<li class="social__item">
+									<a  href="#" class="social__link">
+										freelance.ru/myname
+									</a>
+								</li>
+								<li class="social__item">
+									<a  href="#" class="social__link">
+										vk.com/12343
+									</a>
+								</li>
+								<li class="social__item">
+									<a href="mailto:info@sitename.ru" class="social__link">
+										info@sitename.ru
+									</a>
+								</li>
+							</ul>
+							<div class="write d-flex jcsb">
+								<div class="write__icon"></div>
+								<p class="write__text">
+									Не стесняйтесь, пишите
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -182,146 +163,93 @@
 	</section>
 	<section class="skills" id="skills">
 		<div class="container">
-			<h2 class="skills__title">
-				Я покажу,<br>
-				как мне удается...
+			<h2 class="skills-title">
+				Навыки
 			</h2>
-			<div class="skills__elements skills__element_left d-flex">
-				<div class="skills__element d-flex">
-					<span class="skills__icon">
-						1
-					</span>
-					<div class="skills__details">
-						<h3 class="skills__name">
-							Зарабатывать тысячи долларов
-						</h3>
-						<p class="skills__text">
-							Исключительно с помощью веб-верстки и навыков разработки сайтов
-						</p>
+			<div class="skills-list d-flex jcsb">
+				<div class="skills-list__item d-flex">
+					<div class="skills-list__percent">
+						98%
 					</div>
-				</div>
-				<div class="skills__element skills__element_center d-flex">
-					<span class="skills__icon">
-						2
-					</span>
-					<div class="skills__details">
-						<h3 class="skills__name">
-							Работать <br>
-							в путешествиях
-						</h3>
-						<p class="skills__text">
-							Без возврата домой, используя ноутбук и все возможности фриланса
-						</p>
-					</div>
-				</div>
-				<div class="skills__element skills__element_right d-flex">
-					<span class="skills__icon">
-						3
-					</span>
-					<div class="skills__details">
-						<h3 class="skills__name">
-							Быть на шаг впереди конкурентов
-						</h3>
-						<p class="skills__text">
-							Используя проверенные стратегии развития, общения и работы с клиентами
-						</p>
-					</div>
-				</div>
-			</div>
-			
-		</div>
-	</section>
-	<section class="limits" id="limits">
-		<div class="container">
-			<h2 class="limits__title">
-				Если вы
-			</h2>
-			<div class="limits__block d-flex jcsb">
-				<div class="limits__card limits__card_green">
-					<i class="limits__icon fa fa-flag"></i>
-					<p class="limits__text">
-						Начинающий <br>
-						веб-верстальщик
+					<p class="skills-list__name">
+						Photoshop
 					</p>
 				</div>
-				<div class="limits__card limits__card_blue">
-					<i class="limits__icon fa fa-money-bill-alt"></i>
-					<p class="limits__text">
-						Не довольны доходами на фрилансе
+				<div class="skills-list__item d-flex">
+					<div class="skills-list__percent">
+						99%
+					</div>
+					<p class="skills-list__name">
+						html5
 					</p>
 				</div>
-				<div class="limits__card limits__card_pink">
-					<i class="limits__icon fa fa-meh"></i>
-					<p class="limits__text">
-						На фрилансе &#62;2 лет, но ваш доход &#60; $1000
+				<div class="skills-list__item d-flex">
+					<div class="skills-list__percent">
+						100%
+					</div>
+					<p class="skills-list__name">
+						CSS3
+					</p>
+				</div>
+				<div class="skills-list__item d-flex">
+					<div class="skills-list__percent">
+						0%
+					</div>
+					<p class="skills-list__name">
+						Лень
 					</p>
 				</div>
 			</div>
+
 		</div>
 	</section>
-	<section class="invite" id="invite">
+	<section class="work" id="work">
 		<div class="container">
-			<div class="contact contact_color d-flex jcsb">
-				<div class="offer invite__offer d-flex-center" id="offer">
-					<div class="offer__workshop offer__workshop_white">
-						<i class="fa fa-graduation-cap"></i>
-						Онлайн-мастер-класс
-					</div>
-					<h2 class="offer__title offer__title_white">
-						Не потеряйте уникальную возможность.
-						Бронируйте участие уже сегодня!
-					</h2>
-					<div class="offer__texts d-flex">
-						<p class="offer__text offer__text_white">
-							<i class="fa fa-clock"></i>
-							9 апреля в 18:00
+			<h2 class="work-title">
+				Работы
+			</h2>
+			<div class="work-list d-flex jcsb">
+				<div class="work-list__item">
+					<img src="img/canyon.jpg" alt="Canyon" class="work-list__pic">
+					<div class="work-list__overflow">
+						<p class="work-list__name">
+							Название работы
 						</p>
-						<p class="offer__text offer__text_white">
-							<i class="fa fa-users"></i>
-							Всего 40 мест
-						</p>
+						<a href="#" class="work-list__link">
+							Смотреть
+						</a>
 					</div>
-					
 				</div>
-				<form action="#" class="form">
-					<h4 class="form__title">
-						Забронировать участие
-					</h4>
-					<p class="form__text">
-						Чтобы стать профессионалом в  HTML и CSS, а также делать WOW
-					</p>
-					<div class="form__wrap">
-						<input type="text" class="form__input" name="name" placeholder="Введите имя" required>
-						<input type="email" class="form__input" name="email" placeholder="Введите E-mail" required>
-						<input type="tel" class="form__input" name="phone" placeholder="Введите телефон">
-						<button type="submit" class="form__btn">
-							Оставить заявку
-						</button>
+				<div class="work-list__item">
+					<img src="img/river.jpg" alt="Riwer" class="work-list__pic">
+					<div class="work-list__overflow">
+						<p class="work-list__name">
+							Название работы
+						</p>
+						<a href="#" class="work-list__link">
+							Смотреть
+						</a>
 					</div>
-					<p class="form__safety">
-						Ваши данные под защитой
-					</p>
-				</form>
+				</div>
+				<div class="work-list__item">
+					<img src="img/winter.jpg" alt="Winter" class="work-list__pic">
+					<div class="work-list__overflow">
+						<p class="work-list__name">
+							Название работы
+						</p>
+						<a href="#" class="work-list__link">
+							Смотреть
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
 	<footer class="footer" id="footer">
 		<div class="container">
-			<nav class="nav d-flex jcsb">
-				<a class="logo d-flex" href="#">
-					<i class="logo__icon fa fa-plug"></i>
-					<div class="logo__text">
-						Моя школа <span class="logo__text-big">верстки</span>
-					</div>
-				</a>
-				<p class="coppy">
-					Все права защищены
-				</p>
-				<a href="tel:+749556756412" class="call">
-					<i class="fa fa-phone"></i>
-					+7 (495) 567-564-12
-				</a>
-			</nav>
+			<p class="future opacity-text">
+				2018-2099 / Смотрю в будущее
+			</p>
 		</div>
 	</footer>
 </body>
