--- a/index.html
+++ b/index.html
@@ -3,36 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Онлайн-курсы верстки от Шуляка Сергея</title>
-	<meta name="description" content="Уникальные курсы в формате онлайн. Становитесь фрилансером уже сегодня! Консультации преподавателей и домашние задания уже ожидают!">
-	<meta name="keywords" content="Онлайн-курсы, Верстка, Курсы по верстке, Фриланс, Обучение верстки">
+	<title>MY PORTFOLIO</title>
+	<meta name="description" content="Портфолио выполненых работ. Качественная верстка современных макетов">
+	<meta name="keywords" content="Портфолио, Верстка, CSS3 анимация, MYPORTFOLIO">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicon/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="img/favicon/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="img/favicon/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="img/favicon/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16.png">
-	<link rel="apple-touch-icon" href="img/favicon/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="img/favicon/favicon-144.png">
-	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
 	<!-- OG Tags -->
-	<meta property="og:title" content="Онлайн-курсы: обучение разработке сайтов, веб-дизайну, wordpress, фрилансу">
-	<meta property="og:description" content="Уникальные курсы в формате онлайн. Становитесь фрилансером уже сегодня! Консультации преподавателей и домашние задания уже ожидают!">
+	<meta property="og:title" content="MY PORTFOLIO">
+	<meta property="og:description" content="ортфолио выполненых работ. Качественная верстка современных макетов">
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
-	<meta property="og:site_name" content="Онлайн-курсы верстки от Шуляка Сергея">
+	<meta property="og:site_name" content="Портфолио Шуляка Сергея">
 	<!-- CSS Styles -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
