--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/png" sizes="196x196" href="img/favicon/favicon-192.png">
 	<!-- OG Tags -->
 	<meta property="og:title" content="MY PORTFOLIO">
-	<meta property="og:description" content="ортфолио выполненых работ. Качественная верстка современных макетов">
+	<meta property="og:description" content="Портфолио выполненых работ. Качественная верстка современных макетов">
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
 	<meta property="og:site_name" content="Портфолио Шуляка Сергея">
