--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
 	<meta property="og:site_name" content="Портфолио Шуляка Сергея">
+	<!-- Chrome, Firefox OS and Opera -->
+ 	<meta name="theme-color" content="#204d15">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#204d15">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#204d15">
 	<!-- CSS Styles -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
