--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<meta property="og:image" content="#" >
 	<meta property="og:site_name" content="Портфолио Шуляка Сергея">
 	<!-- Chrome, Firefox OS and Opera -->
- 	<meta name="theme-color" content="#204d15">
+ 	<meta name="theme-color" content="#b7bbb6">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#204d15">
+	<meta name="msapplication-navbutton-color" content="#b7bbb6">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#204d15">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#b7bbb6">
 	<!-- CSS Styles -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
