--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 							Bootstrap CSS в активной практике
 						</a>
 					</li>
+					<li>
+						<a href="dz11/index.html" target="_blank">
+							Мастер-класс по верстке на Bootstrap 4
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
