--- a/dz11/about.html
+++ b/dz11/about.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
 				<div class="col-6 col-md-4 col-lg-3 col-xl-4">
-					<a href="index.html" alt="LAB Consulting" class="logo"></a>
+					<<a href="index.html" class="logo"></a>
 				</div>
 				<div class="d-none d-lg-block col-lg-7 col-xl-6">
 					<nav class="nav">
@@ -224,7 +224,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="#" alt="LAB Consulting" class="logo-footer"></a>
+					<a href="index.html" class="logo-footer"></a>
 				</div>
 				<div class="col-sm-6 col-md-4 col-lg-3">
 					<div class="footer__texts footer__texts_left">
