--- a/dz11/about.html
+++ b/dz11/about.html
@@ -41,7 +41,9 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-4">
 					<a href="index.html" class="logo"></a>
 				</div>
-				<div class="d-none d-lg-block col-lg-7 col-xl-6">
+				<div class="col-1 col-lg-7 col-xl-6 order-1 order-lg-0">
+					<input type="checkbox" id="nav-trigger" class="nav-trigger">
+					<label for="nav-trigger" class="nav__btn"></label>
 					<nav class="nav">
 						<ul class="menu d-flex justify-content-between">
 							<li class="menu__item">
@@ -72,16 +74,68 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-6 col-md-3 col-lg-2 d-flex justify-content-end">
+				<div class="offset-md-4 offset-lg-0 col-6 col-sm-5 col-md-3 col-lg-2 d-flex justify-content-end">
 					<button class="btn header__btn">
-						<i class="fas fa-phone btn__phone"></i>
+						<i class="fas fa-phone btn__phone btn__phone_mirror"></i>
 						Заказать звонок
 					</button>
 				</div>
 			</div>
 		</div>
 	</header>
-	
+	<section class="nav-top">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3">
+					<div class="page-info">
+						<h1 class="page-info__title">
+							О компании
+						</h1>
+						<div class="page-info__links d-flex align-items-center">
+							<a href="index.html" class="page-info__link">
+								Главная
+							</a>
+							<span class="page-info__icon">
+								&#8594;
+							</span>
+							<p class="page-info__name">
+								О компании
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6 ml-auto">
+					<ul class="page-nav d-flex justify-content-between">
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Видение
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Преимущества
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Клиенты
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Партнеры
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Контакты
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="pagination" id="pagination">
 		<div class="container">
 			<div class="row">
