--- a/dz11/index.html
+++ b/dz11/index.html
@@ -41,7 +41,9 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-4">
 					<a href="index.html" class="logo"></a>
 				</div>
-				<div class="d-none d-lg-block col-lg-7 col-xl-6">
+				<div class="col-12 col-sm-1 col-lg-7 col-xl-6 order-1 order-lg-0">
+					<input type="checkbox" id="nav-trigger" class="nav-trigger">
+					<label for="nav-trigger" class="nav__btn nav__btn_lines"></label>
 					<nav class="nav">
 						<ul class="menu d-flex justify-content-between">
 							<li class="menu__item">
@@ -72,7 +74,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-6 col-md-3 col-lg-2 d-flex justify-content-end">
+				<div class="offset-md-4 offset-lg-0 col-6 col-sm-5 col-md-3 col-lg-2 d-flex justify-content-end">
 					<button class="btn header__btn">
 						<i class="fas fa-phone btn__phone"></i>
 						Заказать звонок
