--- a/dz11/about.html
+++ b/dz11/about.html
@@ -41,7 +41,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-4">
 					<a href="index.html" class="logo"></a>
 				</div>
-				<div class="col-1 col-lg-7 col-xl-6 order-1 order-lg-0">
+				<div class="col-12 col-sm-1 col-lg-7 col-xl-6 order-1 order-lg-0">
 					<input type="checkbox" id="nav-trigger" class="nav-trigger">
 					<label for="nav-trigger" class="nav__btn"></label>
 					<nav class="nav">
