--- a/dz11/index.html
+++ b/dz11/index.html
@@ -43,7 +43,9 @@
 				</div>
 				<div class="col-12 col-sm-1 col-lg-7 col-xl-6 order-1 order-lg-0">
 					<input type="checkbox" id="nav-trigger" class="nav-trigger">
-					<label for="nav-trigger" class="nav__btn nav__btn_lines"></label>
+					<label for="nav-trigger" class="nav__btn">
+						<i class="fas fa-bars nav__btn-icon"></i>
+					</label>
 					<nav class="nav">
 						<ul class="menu d-flex justify-content-between">
 							<li class="menu__item">
