--- a/dz11/services.html
+++ b/dz11/services.html
@@ -43,7 +43,9 @@
 				</div>
 				<div class="col-12 col-sm-1 col-lg-7 col-xl-6 order-1 order-lg-0">
 					<input type="checkbox" id="nav-trigger" class="nav-trigger">
-					<label for="nav-trigger" class="nav__btn"></label>
+					<label for="nav-trigger" class="nav__btn">
+						<i class="fas fa-bars nav__btn-icon"></i>
+					</label>
 					<nav class="nav">
 						<ul class="menu d-flex justify-content-between">
 							<li class="menu__item">
@@ -83,7 +85,59 @@
 			</div>
 		</div>
 	</header>
-	
+	<section class="nav-top">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3">
+					<div class="page-info">
+						<h1 class="page-info__title">
+							О компании
+						</h1>
+						<div class="page-info__links d-flex align-items-center">
+							<a href="index.html" class="page-info__link">
+								Главная
+							</a>
+							<span class="page-info__icon">
+								&#8594;
+							</span>
+							<p class="page-info__name">
+								О компании
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6 ml-auto">
+					<ul class="page-nav d-flex justify-content-between">
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Видение
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Преимущества
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Клиенты
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Партнеры
+							</a>
+						</li>
+						<li class="page-nav__item">
+							<a href="#" class="page-nav__link">
+								Контакты
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="pagination" id="pagination">
 		<div class="container">
 			<div class="row">
