--- a/dz11/services.html
+++ b/dz11/services.html
@@ -88,10 +88,10 @@
 	<section class="nav-top">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3">
-					<div class="page-info">
+				<div class="col-lg-4 col-xl-3">
+					<div class="page-info flex-column flex-lg-row d-flex d-lg-block align-items-center align-items-lg-stretch">
 						<h1 class="page-info__title">
-							О компании
+							Услуги
 						</h1>
 						<div class="page-info__links d-flex align-items-center">
 							<a href="index.html" class="page-info__link">
@@ -101,36 +101,35 @@
 								&#8594;
 							</span>
 							<p class="page-info__name">
-								О компании
+								Услуги
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6 ml-auto">
-					<ul class="page-nav d-flex justify-content-between">
+				<div class="col-lg-8 col-xl-7 ml-lg-auto">
+					<ul class="page-nav d-flex justify-content-center">
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
-								Видение
+								Legal
+								<span class="page-nav__link_small">
+									Юридическое сопровождение
+								</span>
 							</a>
 						</li>
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
-								Преимущества
+								Accounting
+								<span class="page-nav__link_small">
+									Финансовый аутсорсинг
+								</span>
 							</a>
 						</li>
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
-								Клиенты
-							</a>
-						</li>
-						<li class="page-nav__item">
-							<a href="#" class="page-nav__link">
-								Партнеры
-							</a>
-						</li>
-						<li class="page-nav__item">
-							<a href="#" class="page-nav__link">
-								Контакты
+								Business Consulting
+								<span class="page-nav__link_small">
+									Бизнес консалтинг
+								</span>
 							</a>
 						</li>
 					</ul>
