--- a/dz11/about.html
+++ b/dz11/about.html
@@ -88,8 +88,8 @@
 	<section class="nav-top">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3">
-					<div class="page-info">
+				<div class="col-lg-4 col-xl-3">
+					<div class="page-info flex-column flex-lg-row d-flex d-lg-block align-items-center align-items-lg-stretch">
 						<h1 class="page-info__title">
 							О компании
 						</h1>
@@ -106,7 +106,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6 ml-auto">
+				<div class="col-lg-8 col-xl-6 ml-lg-auto">
 					<ul class="page-nav d-flex justify-content-between">
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
