about page update

--- a/dz11/about.html
+++ b/dz11/about.html
@@ -138,6 +138,104 @@
 			</div>
 		</div>
 	</section>
+	<section class="advantages" id="advantages">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="advantages__title">
+						Преимущества LAB Consult
+					</h2>
+					<div class="advantages__texts d-flex justify-content-between">
+						<p class="advantages__text">
+						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+					</p>
+					<p class="advantages__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat commodo consequat.
+					</p>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="advantages__items">
+						<div class="advantage d-flex flex-wrap">
+							<div class="advantage__icon"></div>
+							<div class="advantage__texts">
+								<h3 class="advantage__title">
+									Первое весомое преимущество
+								</h3>
+								<p class="advantage__text">
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+								</p>
+							</div>
+						</div>
+						<div class="advantage d-flex flex-wrap">
+							<div class="advantage__icon"></div>
+							<div class="advantage__texts">
+								<h3 class="advantage__title">
+									Второе сильное и мощное преимущество
+								</h3>
+								<p class="advantage__text">
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+								</p>
+							</div>
+						</div>
+						<div class="advantage d-flex flex-wrap">
+							<div class="advantage__icon"></div>
+							<div class="advantage__texts">
+								<h3 class="advantage__title">
+									Третье и финальное сильное и мощное преимущество
+								</h3>
+								<p class="advantage__text">
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="galery" id="galery">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="galery__title">
+						Фото наших мощностей
+					</h2>
+					<div class="galery__items d-flex justify-content-between">
+						<div class="galery__item">
+							<img src="img/about/galery-1.jpg" alt="Galery photo" class="galery__photo">
+							<div class="galery__overlay d-flex align-items-center justify-content-center">
+								<i class="fas fa-arrows-alt-v arrow-icon"></i>
+								<i class="fas fa-expand expand-icon"></i>
+							</div>
+						</div>
+						<div class="galery__item">
+							<img src="img/about/galery-2.jpg" alt="Galery photo" class="galery__photo">
+							<div class="galery__overlay d-flex align-items-center justify-content-center">
+								<i class="fas fa-arrows-alt-v arrow-icon"></i>
+								<i class="fas fa-expand expand-icon"></i>
+							</div>
+						
+						</div>
+						<div class="galery__item">
+							<img src="img/about/galery-3.jpg" alt="Galery photo" class="galery__photo">
+							<div class="galery__overlay d-flex align-items-center justify-content-center">
+								<i class="fas fa-arrows-alt-v arrow-icon"></i>
+								<i class="fas fa-expand expand-icon"></i>
+							</div>
+						</div>
+						<div class="galery__item">
+							<img src="img/about/galery-4.jpg" alt="Galery photo" class="galery__photo">
+							<div class="galery__overlay d-flex align-items-center justify-content-center">
+								<i class="fas fa-arrows-alt-v arrow-icon"></i>
+								<i class="fas fa-expand expand-icon"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="pagination" id="pagination">
 		<div class="container">
 			<div class="row">
