--- a/dz11/services.html
+++ b/dz11/services.html
@@ -107,7 +107,7 @@
 					</div>
 				</div>
 				<div class="col-lg-8 col-xl-7 ml-lg-auto">
-					<ul class="page-nav d-flex justify-content-center">
+					<ul class="page-nav d-flex justify-content-between">
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
 								Legal
