contacts page add

--- a/dz11/index.html
+++ b/dz11/index.html
@@ -99,14 +99,14 @@
 					</p>
 				</div>
 				<div class="col-12">
-					<div class="invite__links d-flex justify-content-around align-items-center">
-						<a href="#" class="invite__link invite__link_fb">
+					<div class="social social_invite d-flex justify-content-around align-items-center">
+						<a href="#" class="social__link social__link_fb">
 							<i class="fab fa-facebook"></i>
 						</a>
-						<a href="#" class="invite__link invite__link_tw">
+						<a href="#" class="social__link social__link_tw">
 							<i class="fab fa-twitter"></i>
 						</a>
-						<a href="#" class="invite__link invite__link_tg">
+						<a href="#" class="social__link social__link_tg">
 							<i class="fab fa-telegram-plane"></i>
 						</a>
 					</div>
