--- a/dz11/contacts.html
+++ b/dz11/contacts.html
@@ -101,7 +101,7 @@
 								&#8594;
 							</span>
 							<p class="page-info__name">
-								Контакты
+								Контактная информация
 							</p>
 						</div>
 					</div>
@@ -124,6 +124,68 @@
 							</a>
 						</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="loc" id="loc">
+		<div id="map">
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12">
+					<div class="place">
+						<div class="place__head d-flex">
+							<h5 class="place__title">
+								LAB Consulting
+							</h5>
+							<div class="social social_place d-flex justify-content-between ml-auto">
+								<a href="#" class="social__link social__link_place">
+									<i class="fab fa-facebook"></i>
+								</a>
+								<a href="#" class="social__link social__link_place">
+									<i class="fab fa-twitter"></i>
+								</a>
+								<a href="#" class="social__link social__link_place">
+									<i class="fab fa-telegram-plane"></i>
+								</a>
+							</div>
+						</div>
+						<div class="place__body d-flex justify-content-between">
+							<div class="place__contacts">
+								<div class="place__phones">
+									<a class="place__phone place__link"  href="tel:380487562354">
+										<i class="fas fa-phone place__phone-icon_mirror"></i>
+										+38 (048) 756-23-54
+									</a>
+									<a class="place__phone place__link" href="tel:380487562354">
+										<i class="fas fa-phone place__phone-icon_mirror"></i>
+										+38 (048) 756-23-54
+									</a>
+								</div>
+								<div class="place__address d-flex">
+									<i class="fas fa-location-arrow place__address-icon"></i>
+									<p class="place__adress-text">
+										65000,<br>
+										Украина, г. Одесса<br>
+										Ул Базарная, 36
+									</p>
+								</div>
+								<a class="place__mail place__link" href="mailto:info@lab-consult.com">
+									<i class="fas fa-envelope place__mail-icon"></i>
+									info@lab-consult.com
+								</a>
+							</div>
+							<div class="place__texts">
+								<p class="place__text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+								<p class="pace__text">
+									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -321,5 +383,36 @@
 			</div>
 		</div>
 	</footer>
+	 <script>
+      function initMap() {
+        var myLatLng;
+	        if (screen.width <= 991) {
+			  myLatLng = {lat: 46.474049, lng: 30.746038};
+			} else if (screen.width >991) {
+			  myLatLng = {lat: 46.474136, lng: 30.748308};
+			};
+
+        // Create a map object and specify the DOM element
+        // for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: myLatLng,
+          zoom: 17,
+          disableDefaultUI: true,
+          gestureHandling: 'none',
+          zoomControl: false
+        });
+
+        // Create a marker and set its position.
+        var myMarker = {lat: 46.474046, lng: 30.746176};
+        var marker = new google.maps.Marker({
+          map: map,
+          position: myMarker,
+          title: 'улица Базарная, 36, Одеса'
+        });
+      }
+    </script>
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXfjpn5QLFwZ4U01lOg7pcYFHJaWrpOh4&callback=initMap"
+        async defer></script>
 </body>
 </html>
