--- a/dz11/contacts.html
+++ b/dz11/contacts.html
@@ -154,11 +154,11 @@
 						<div class="place__body d-flex justify-content-between">
 							<div class="place__contacts">
 								<div class="place__phones">
-									<a class="place__phone place__link"  href="tel:380487562354">
+									<a href="tel:380487562354" class="place__phone place__link">
 										<i class="fas fa-phone place__phone-icon_mirror"></i>
 										+38 (048) 756-23-54
 									</a>
-									<a class="place__phone place__link" href="tel:380487562354">
+									<a href="tel:+380487562354" class="place__phone place__link">
 										<i class="fas fa-phone place__phone-icon_mirror"></i>
 										+38 (048) 756-23-54
 									</a>
