--- a/dz11/services.html
+++ b/dz11/services.html
@@ -29,6 +29,9 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css" integrity="sha384-QT2Z8ljl3UupqMtQNmPyhSPO/d5qbrzWmFxJqmY7tqoTuT2YrQLEqzvVOP2cT5XW" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
+	<!-- Slider styles -->
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	<!-- CSS Styles -->
 	<link rel="stylesheet" href="css/main.css">
 		<!-- Media Queries CSS -->
@@ -107,7 +110,7 @@
 					</div>
 				</div>
 				<div class="col-lg-8 col-xl-7 ml-lg-auto">
-					<ul class="page-nav d-flex justify-content-between">
+					<ul class="page-nav page-nav_services d-flex justify-content-between">
 						<li class="page-nav__item">
 							<a href="#" class="page-nav__link">
 								Legal
@@ -133,6 +136,206 @@
 							</a>
 						</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="services" id="services">
+		<div class="interactive">
+			<div class="container">
+				<div class="row d-flex justify-content-between align-items-center">
+					<div class="col-sm-4 col-lg-3">
+						<img src="img/services/services-icon.png" alt="Conference" class="interactive__icon">
+					</div>
+					<div class="col-sm-8 col-lg-4">
+						<div class="interactive__texts">
+							<h3 class="interactive__title">
+								Юридическое
+								сопровождение
+							</h3>
+							<p class="interactive__text">
+								Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-5 col-xl-4 offset-xl-1">
+						<ul class="interactive__nav">
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									Подкатегория услуг первая
+								</a>
+							</li>
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									Вторая подкатегория
+								</a>
+							</li>
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									Маленькая услуга
+								</a>
+							</li>
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									Довольно длинная и замысловатая
+								</a>
+							</li>
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									Ещё одна
+								</a>
+							</li>
+							<li class="interactive__nav-item">
+								<span class="interactive__arrow">
+									&#8594;
+								</span>
+								<a href="#" class="interactive__link">
+									И ещё одна в конце
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="service">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8">
+						<div class="service__catecory">
+							<h2 class="service__title">
+								Вторая подкатегория
+							</h2>
+							<div class="service__texts">
+								<p class="service__text">
+									But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.
+								</p>
+								<p class="service__text">
+									To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
+								</p>
+								<p class="service__text">
+									To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
+								</p>
+								<p class="service__text">
+									Mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.
+								</p>
+								<p class="service__text">
+									To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
+								</p>
+								<p class="service__text">
+									No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. 
+								</p>
+							</div>
+							<div class="offer">
+								<h4 class="offer__title">
+									Нужна бесплатная консультация?
+								</h4>
+								<button class="btn offer__btn">
+									Оставить заявку
+								</button>
+								<a href="tel:380487542356" class="offer__link">
+									+38 (048) 754-23-56
+								</a>
+								<p class="offer__text">
+									Наши консультанты свяжутся с Вами максимально быстро и ответят на все интересующие Вас вопросы
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="sidebar">
+							<nav class="sidebar__nav">
+								<h5 class="sidebar__title">
+									Навигация
+								</h5>
+								<ul class="sidebar__menu">
+									<li class="sidebar__item">
+										<span class="sidebar__box"></span>
+										<a href="#" class="sidebar__link">
+											Подпункт номер один
+										</a>
+									</li>
+									<li class="sidebar__item">
+										<span class="sidebar__box"></span>
+										<a href="#" class="sidebar__link">
+											Второй подпункт
+										</a>
+									</li>
+									<li class="sidebar__item">
+										<span class="sidebar__box"></span>
+										<a href="#" class="sidebar__link">
+											Третья подкатегория c длинным названием
+										</a>
+									</li>
+									<li class="sidebar__item">
+										<span class="sidebar__box"></span>
+										<a href="#" class="sidebar__link">
+											Категория номер четыре
+										</a>
+									</li>
+								</ul>
+							</nav>
+							<div class="reviews">
+								<h5 class="sidebar__title">
+									Отзывы
+								</h5>
+								<div class="reviews__slides">
+									<div class="reviews__slide d-flex flex-column align-items-center">
+										<img src="img/services/member-icon.png" alt="Валерий Цукерберг" class="reviews__photo"></img>
+										<h6 class="reviews__name">
+											Валерий Цукерберг
+										</h6>
+										<p class="reviews__comment">
+											al exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy
+										</p>
+										<a href="#" class="reviews__link">
+											<i class="fab fa-facebook-f"></i>
+										</a>
+									</div>
+									<div class="reviews__slide d-flex flex-column align-items-center">
+										<img src="img/services/member-icon.png" alt="Валерий Цукерберг" class="reviews__photo"></img>
+										<h6 class="reviews__name">
+											Валерий Цукерберг
+										</h6>
+										<p class="reviews__comment">
+											al exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy
+										</p>
+										<a href="#"  class="reviews__link">
+											<i class="fab fa-facebook-f"></i>
+										</a>
+									</div>
+									<div class="reviews__slide d-flex flex-column align-items-center">
+										<img src="img/services/member-icon.png" alt="Валерий Цукерберг" class="reviews__photo"></img>
+										<h6 class="reviews__name">
+											Валерий Цукерберг
+										</h6>
+										<p class="reviews__comment">
+											al exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy
+										</p>
+										<a href="#"  class="reviews__link">
+											<i class="fab fa-facebook-f"></i>
+										</a>
+									</div>
+								</div>
+								<div class="your-class-arrow"></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -330,5 +533,10 @@
 			</div>
 		</div>
 	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<!-- Slider -->
+	<script src="js/slide.js" type="text/javascript">
+  </script>
 </body>
 </html>
