--- a/dz11/contacts.html
+++ b/dz11/contacts.html
@@ -383,7 +383,7 @@
 			</div>
 		</div>
 	</footer>
-	 <script>
+	 <script type="text/javascript">
       function initMap() {
         var myLatLng;
 	        if (screen.width <= 991) {
@@ -409,7 +409,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXfjpn5QLFwZ4U01lOg7pcYFHJaWrpOh4&callback=initMap"
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXfjpn5QLFwZ4U01lOg7pcYFHJaWrpOh4&callback=initMap"
         async defer></script>
 </body>
 </html>
