--- a/dz11/services.html
+++ b/dz11/services.html
@@ -533,10 +533,10 @@
 			</div>
 		</div>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<!-- Slider -->
-	<script src="js/slide.js" type="text/javascript">
+	<script type="text/javascript" src="js/slide.js" type="text/javascript">
   </script>
 </body>
 </html>
