--- a/dz11/services.html
+++ b/dz11/services.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Услуги</title>
-	<meta name="description" content="Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo">
-	<meta name="keywords" content="Easily Customised, FULL OF IDEAS , SMART AI INSIDE, ACTIVELIVE">
+	<meta name="description" content="LAB Consulting Ваш надежный партнер в области транспортно-логистического сопровождения">
+	<meta name="keywords" content="Транспорт, логистика, сопровождение грузов, грузовые направления, доставка, доставка грузов, LAB Consulting услуги,  Юридическое сопровождение, Финансовый аутсорсинг, Бизнес консалтинг">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="img/favicon/favicon-192.png">
 	<!-- OG Tags -->
-	<meta property="og:title" content="ACTIVELIVE">
-	<meta property="og:description" content="Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo">
+	<meta property="og:title" content="LAB Consulting">
+	<meta property="og:description" content="Ваш надежный партнер в области транспортно-логистического сопровождения">
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
-	<meta property="og:site_name" content="ACTIVELIVE">
+	<meta property="og:site_name" content="Услуги">
 	<!-- Chrome, Firefox OS and Opera -->
  	<meta name="theme-color" content="#b7bbb6">
 	<!-- Windows Phone -->
@@ -80,7 +80,7 @@
 					</nav>
 				</div>
 				<div class="offset-md-4 offset-lg-0 col-6 col-sm-5 col-md-3 col-lg-2 d-flex justify-content-end">
-					<button class="btn header__btn">
+					<button class="btn header__btn callback__open">
 						<i class="fas fa-phone btn__phone btn__phone_mirror"></i>
 						Заказать звонок
 					</button>
@@ -245,7 +245,7 @@
 								<h4 class="offer__title">
 									Нужна бесплатная консультация?
 								</h4>
-								<button class="btn offer__btn">
+								<button class="btn offer__btn callback__open">
 									Оставить заявку
 								</button>
 								<a href="tel:380487542356" class="offer__link">
@@ -518,14 +518,14 @@
 									LAB Consulting
 								</span>
 							</p>
-							<a href="#" class="copy__link">
+							<a href="index.html" class="copy__link">
 								lab-consult.com
 							</a>
 						</div>
 					</div>
 				</div>
 				<div class="d-none d-lg-block col-lg-2 offset-xl-1">
-					<button class="btn footer__btn">
+					<button class="btn footer__btn callback__open">
 						<i class="fas fa-phone btn__phone"></i>
 						Заказать звонок
 					</button>
@@ -533,7 +533,24 @@
 			</div>
 		</div>
 	</footer>
+	<div class="callback-block">
+		<form class="callback">
+			<h2 class="callback__title">
+				Заказать звонок
+			</h2>
+			<input class="callback__input" type="name" name="name" placeholder="Введите имя">
+			<input class="callback__input" type="tel" name="phone" placeholder="Введите номер телефона" required>
+			<p class="callback__text">
+				Наши консультанты свяжутся с Вами максимально быстро и ответят на все вопросы
+			</p>
+			<button class="btn callback__btn">
+				Заказать звонок
+			</button>
+		</form>
+		<div class="callback-block__bg"></div>
+	</div>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="js/callback.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<!-- Slider -->
 	<script type="text/javascript" src="js/slide.js" type="text/javascript">
