--- a/dz11/index.html
+++ b/dz11/index.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Главная</title>
-	<meta name="description" content="Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo">
-	<meta name="keywords" content="Easily Customised, FULL OF IDEAS , SMART AI INSIDE, ACTIVELIVE">
+	<meta name="description" content="LAB Consulting Ваш надежный партнер в области транспортно-логистического сопровождения">
+	<meta name="keywords" content="Транспорт, логистика, сопровождение грузов, грузовые направления, доставка, доставка грузов">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="img/favicon/favicon-192.png">
 	<!-- OG Tags -->
-	<meta property="og:title" content="ACTIVELIVE">
-	<meta property="og:description" content="Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo">
+	<meta property="og:title" content="LAB Consulting">
+	<meta property="og:description" content="Ваш надежный партнер в области транспортно-логистического сопровождения">
 	<meta property="og:type" content="article">
 	<meta property="og:image" content="#" >
-	<meta property="og:site_name" content="ACTIVELIVE">
+	<meta property="og:site_name" content="Главная страница">
 	<!-- Chrome, Firefox OS and Opera -->
  	<meta name="theme-color" content="#b7bbb6">
 	<!-- Windows Phone -->
@@ -77,7 +77,7 @@
 					</nav>
 				</div>
 				<div class="offset-md-4 offset-lg-0 col-6 col-sm-5 col-md-3 col-lg-2 d-flex justify-content-end">
-					<button class="btn header__btn">
+					<button class="btn header__btn callback__open">
 						<i class="fas fa-phone btn__phone"></i>
 						Заказать звонок
 					</button>
@@ -427,7 +427,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="index.html" class="logo-footer"></a>
+					<a href="#" class="logo-footer"></a>
 				</div>
 				<div class="col-sm-6 col-md-4 col-lg-3">
 					<div class="footer__texts footer__texts_left">
@@ -463,14 +463,14 @@
 									LAB Consulting
 								</span>
 							</p>
-							<a href="#" class="copy__link">
+							<a href="index.html" class="copy__link">
 								lab-consult.com
 							</a>
 						</div>
 					</div>
 				</div>
 				<div class="d-none d-lg-block col-lg-2 offset-xl-1">
-					<button class="btn footer__btn">
+					<button class="btn footer__btn callback__open">
 						<i class="fas fa-phone btn__phone"></i>
 						Заказать звонок
 					</button>
@@ -478,5 +478,23 @@
 			</div>
 		</div>
 	</footer>
+	<div class="callback-block">
+		<form class="callback">
+			<h2 class="callback__title">
+				Заказать звонок
+			</h2>
+			<input class="callback__input" type="name" name="name" placeholder="Введите имя">
+			<input class="callback__input" type="tel" name="phone" placeholder="Введите номер телефона" required>
+			<p class="callback__text">
+				Наши консультанты свяжутся с Вами максимально быстро и ответят на все вопросы
+			</p>
+			<button class="btn callback__btn">
+				Заказать звонок
+			</button>
+		</form>
+		<div class="callback-block__bg"></div>
+	</div>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="js/callback.js"></script>
 </body>
 </html>
