--- a/dz11/about.html
+++ b/dz11/about.html
@@ -205,7 +205,7 @@
 					</h2>
 					<div class="galery__items d-flex justify-content-between">
 						<div class="galery__item">
-							<a href="img/about/galery-1.jpg" class="lightzoom">
+							<a href="img/about/galery-1-max.jpg" class="lightzoom">
 								<img src="img/about/galery-1.jpg" alt="Galery photo" class="galery__photo">
 								<div class="galery__overlay d-flex align-items-center justify-content-center">
 									<i class="fas fa-arrows-alt-v arrow-icon"></i>
@@ -214,7 +214,7 @@
 							</a>
 						</div>
 						<div class="galery__item">
-							<a href="img/about/galery-2.jpg" class="lightzoom">
+							<a href="img/about/galery-2-max.jpg" class="lightzoom">
 								<img src="img/about/galery-2.jpg" alt="Galery photo" class="galery__photo">
 								<div class="galery__overlay d-flex align-items-center justify-content-center">
 									<i class="fas fa-arrows-alt-v arrow-icon"></i>
@@ -223,7 +223,7 @@
 							</a>
 						</div>
 						<div class="galery__item">
-							<a href="img/about/galery-3.jpg" class="lightzoom">
+							<a href="img/about/galery-3-max.jpg" class="lightzoom">
 								<img src="img/about/galery-3.jpg" alt="Galery photo" class="galery__photo">
 								<div class="galery__overlay d-flex align-items-center justify-content-center">
 									<i class="fas fa-arrows-alt-v arrow-icon"></i>
@@ -232,7 +232,7 @@
 							</a>
 						</div>
 						<div class="galery__item">
-							<a href="img/about/galery-4.jpg" class="lightzoom">
+							<a href="img/about/galery-4-max.jpg" class="lightzoom">
 								<img src="img/about/galery-4.jpg" alt="Galery photo" class="galery__photo">
 								<div class="galery__overlay d-flex align-items-center justify-content-center">
 									<i class="fas fa-arrows-alt-v arrow-icon"></i>
