--- a/dz11/index.html
+++ b/dz11/index.html
@@ -160,9 +160,9 @@
 			</div>
 			<div class="row">
 				<div class="col-12">
-					<button class="reasons__btn btn">
+					<a href="about.html" class="reasons__btn btn">
 						Подробнее
-					</button>
+					</a>
 				</div>
 			</div>
 		</div>
