--- a/dz11/about.html
+++ b/dz11/about.html
@@ -37,6 +37,14 @@
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+	<div id="page-preloader">
+		<div class="cssload-thecube">
+			<div class="cssload-cube cssload-c1"></div>
+			<div class="cssload-cube cssload-c2"></div>
+			<div class="cssload-cube cssload-c4"></div>
+			<div class="cssload-cube cssload-c3"></div>
+		</div>
+	</div>
 	<header class="header" id="header">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
@@ -466,5 +474,6 @@
   			isEscClosing: true
   		});
 	</script>
+	<script src="js/preloader.js"></script>
 </body>
 </html>
