--- a/dz11/contacts.html
+++ b/dz11/contacts.html
@@ -35,6 +35,14 @@
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+	<div id="page-preloader">
+		<div class="cssload-thecube">
+			<div class="cssload-cube cssload-c1"></div>
+			<div class="cssload-cube cssload-c2"></div>
+			<div class="cssload-cube cssload-c4"></div>
+			<div class="cssload-cube cssload-c3"></div>
+		</div>
+	</div>
 	<header class="header" id="header">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
@@ -432,5 +440,6 @@
         async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	<script src="js/preloader.js"></script>
 </body>
 </html>
