--- a/dz11/services.html
+++ b/dz11/services.html
@@ -38,6 +38,14 @@
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+	<div id="page-preloader">
+		<div class="cssload-thecube">
+			<div class="cssload-cube cssload-c1"></div>
+			<div class="cssload-cube cssload-c2"></div>
+			<div class="cssload-cube cssload-c4"></div>
+			<div class="cssload-cube cssload-c3"></div>
+		</div>
+	</div>
 	<header class="header" id="header">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
@@ -556,7 +564,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<!-- Slider -->
-	<script type="text/javascript" src="js/slide.js" type="text/javascript">
-  </script>
+	<script type="text/javascript" src="js/slide.js"></script>
+	<script src="js/preloader.js"></script>
 </body>
 </html>
